# python-xz

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
src/xz/: __init__.py  block.py  common.py  file.py  io.py  open.py  strategy.py  stream.py  typing.py  utils.py
tests/: conftest.py
tests/integration/: conftest.py  test_file_read.py  test_file_write.py  test_generate_files.py  test_ram_usage.py  test_readme.py
tests/integration/files/: check-crc32.json  check-crc32.xz  check-crc64.json  check-crc64.xz  check-none.json  check-none.xz  check-sha256.json  check-sha256.xz  example.xz  few-blocks.json  few-blocks.xz  many-blocks.json  many-blocks.xz  one-stream-with-padding.json  one-stream-with-padding.xz  several-filters.json  several-filters.xz  several-streams-with-padding.json  several-streams-with-padding.xz  several-streams.json  several-streams.xz  various-block-sizes.json  various-block-sizes.xz  various-stream-checks-stream-padding-and-block-sizes.json  various-stream-checks-stream-padding-and-block-sizes.xz  various-stream-checks.json  various-stream-checks.xz
tests/unit/: test_attr_proxy.py  test_block.py  test_common.py  test_file.py  test_floordict.py  test_ioabstract.py  test_iocombiner.py  test_ioproxy.py  test_iostatic.py  test_open.py  test_parse_mode.py  test_proxy_property.py  test_stream.py
