[metadata]
name = python-xz
author = Rogdham
author_email = contact@rogdham.net
description = Pure Python implementation of the XZ file format with random access support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rogdham/python-xz
project_urls =
    Source = https://github.com/rogdham/python-xz
keywords = xz lzma compression decompression
license = MIT
license_files = LICENSE.txt
platform = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities
    Topic :: System :: Archiving
    Topic :: System :: Archiving :: Compression

[options]
include_package_data = True
package_dir = =src
packages = xz
python_requires = >=3.7
setup_requires =
    setuptools_scm
    wheel
install_requires =
    typing-extensions>=4.5.0;python_version<"3.8"
